--- a/src/components/LayOut/LayOut.css
+++ b/src/components/LayOut/LayOut.css
@@ -2,18 +2,17 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  align-items: center;       /* центрируем по горизонтали */
+  align-items: center;
   width: 100%;
 }
 
-
 .main-content {
   flex: 1;
-  width: 90%;                /* совпадает с NavBar */
-  max-width: 1260px;         /* тоже ограничение */
+  width: 90%;
+  max-width: 1260px;
 }
 
-.footerContainer{
+.footerContainer {
   left: 50%;
   transform: translateX(-50%);
   width: 90%;
