--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,74 +1,74 @@
-.navigation {
-  position: fixed;       /* фиксируем панель при скролле */
-  top: 0;                /* от верхнего края окна */
-  left: 50%;            
-  transform: translateX(-50%); 
-  width: 90%;            
-  max-width: 1260px;   
-   border-radius: 8px;  
-  display: flex;
-  align-items: center;
-  padding: 0.7rem 1rem;
-  background: white;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.08);
-  z-index: 1000;        
-    
-}
+  .navigation {
+    position: fixed;       
+    top: 0;                
+    left: 50%;            
+    transform: translateX(-50%); 
+    width: 90%;            
+    max-width: 1260px;   
+    border-radius: 8px;  
+    display: flex;
+    align-items: center;
+    padding: 0.7rem 1rem;
+    background: white;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.08);
+    z-index: 1000;        
+      
+  }
 
-/* Лого слева */
-.logo {
-  font-size: 1.3rem;
-  font-weight: 600;
-  margin-right: 2rem;
-}
+  /* Лого слева */
+  .logo {
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-right: 2rem;
+  }
 
-/* Меню по центру */
-.menu {
-  display: flex;
-  gap: 2rem;
-  list-style: none;
-  flex: 1;               /* меню занимает оставшееся пространство */
-  justify-content: center; /* центрируем ссылки */
-  margin: 0;
-  transition: all 0.3s ease;
-}
-
-/* Иконки справа */
-.icons {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-   margin-left: auto; 
-}
-
-/* Бургер-иконка для мобильных */
-.burgerIcon {
-  display: none;
-  font-size: 1.5rem;
-  cursor: pointer;
-  user-select: none;
-
-}
-
-/* Мобильная версия */
-@media (max-width: 768px) {
+  /* Меню по центру */
   .menu {
-    display: none;             /* скрыто по умолчанию */
-    flex-direction: column;
-    width: 100%;
-    background-color: #f5f5f5;
-    padding: 1rem 0;
-    position: absolute;        /* поверх контента */
-    top: 60px;                 /* под NavBar */
-    left: 0;
-    z-index: 10;
+    display: flex;
+    gap: 2rem;
+    list-style: none;
+    flex: 1;              
+    justify-content: center; 
+    margin: 0;
+    transition: all 0.3s ease;
   }
 
-  .menuActive {
-    display: flex;             /* показываем при открытии */
+  /* Иконки справа */
+  .icons {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-left: auto; 
   }
 
+  /* Бургер-иконка для мобильных */
   .burgerIcon {
-    display: block;
+    display: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    user-select: none;
+
   }
-}
+
+  /* Мобильная версия */
+  @media (max-width: 768px) {
+    .menu {
+      display: none;             
+      flex-direction: column;
+      width: 100%;
+      background-color: #f5f5f5;
+      padding: 1rem 0;
+      position: absolute;        
+      top: 60px;                 
+      left: 0;
+      z-index: 10;
+    }
+
+    .menuActive {
+      display: flex;           
+    }
+
+    .burgerIcon {
+      display: block;
+    }
+  }
